--- a/src/main/resources/db/postgres.properties
+++ b/src/main/resources/db/postgres.properties
@@ -2,13 +2,13 @@
 #database.username=wegxlfzjjgxaxy
 #database.password=SSQyKKE_e93kiUCR-ehzMcKCxZ
 
-database.url=jdbc:postgresql://localhost:5432/dem
-database.username=user
-database.password=password
+#database.url=jdbc:postgresql://localhost:5432/dem
+#database.username=user
+#database.password=password
 
-database.init=true
+#database.init=true
 
-jdbc.initLocation=initDB.sql
-jpa.showSql=true
-hibernate.format_sql=true
-hibernate.use_sql_comments=true
+#jdbc.initLocation=initDB.sql
+#jpa.showSql=true
+#hibernate.format_sql=true
+#hibernate.use_sql_comments=true
