--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,4 +1,3 @@
-<?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns="http://xmlns.jcp.org/xml/ns/javaee"
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee
@@ -6,7 +5,7 @@
          version="3.1">
 
 
-    <servlet>
+    <!--<servlet>
         <servlet-name>userServlet</servlet-name>
         <servlet-class>com.dementevay.voting.web.user.UserServlet</servlet-class>
         <load-on-startup>0</load-on-startup>
@@ -14,23 +13,25 @@
     <servlet-mapping>
         <servlet-name>userServlet</servlet-name>
         <url-pattern>/</url-pattern>
-    </servlet-mapping>
+    </servlet-mapping>-->
 
     <!--<context-param>
         <param-name>spring.profiles.default</param-name>
-        <param-value>postgres</param-value>
-    </context-param>
+        <param-value>postgres,jpa</param-value>
+    </context-param>-->
 
+
+    <display-name>Choosearestaurant</display-name>
 
     <context-param>
         <param-name>contextConfigLocation</param-name>
         <param-value>
-            classpath:
+            classpath:spring/spring-app.xml
             classpath:spring/spring-db.xml
         </param-value>
     </context-param>
 
-    &lt;!&ndash; Spring MVC &ndash;&gt;
+    <!-- Spring MVC -->
     <listener>
         <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
     </listener>
@@ -40,10 +41,6 @@
         <init-param>
             <param-name>contextConfigLocation</param-name>
             <param-value>classpath:spring/spring-mvc.xml</param-value>
-        </init-param>
-        <init-param>
-            <param-name>throwExceptionIfNoHandlerFound</param-name>
-            <param-value>true</param-value>
         </init-param>
         <load-on-startup>1</load-on-startup>
     </servlet>
@@ -67,6 +64,6 @@
     <filter-mapping>
         <filter-name>encodingFilter</filter-name>
         <url-pattern>/*</url-pattern>
-    </filter-mapping>-->
+    </filter-mapping>
 
 </web-app>
