Add DataTable & AJAX v0.2

--- a/config/messages/app.properties
+++ b/config/messages/app.properties
@@ -1,7 +1,7 @@
 app.title=Voting for restaurant
 app.footer=App made by <a href="" target=_blank>Dementev Andrey</a> as <a href="" target=_blank>test task</a> (2017)
 app.enter=Enter as
-app.profile=profile
+app.profile=Cost
 app.register=Registration
 app.registered=You are registered. Please Sign in.
 
@@ -40,9 +40,9 @@ meal.startDate=Start date
 meal.endDate=End date
 meal.startTime=Start time
 meal.endTime=End time
-meal.description=Desription
+meal.description=Restaurant
 meal.dateTime=Date/time
-meal.calories=Calories
+meal.meal_cost=Meal : cost
 common.add=Add
 common.deleted=Message deleted
 common.saved=Message saved
@@ -60,3 +60,4 @@ Email=Error email {0}
 Range={0} not range between {2} and {1}
 Length=Length should be between {2} and {1}
 SafeHtml={0} maybe not security content
+restaurants.edit=Edit
